--- a/02-flexbox.html
+++ b/02-flexbox.html
@@ -11,7 +11,7 @@
         div {
             background-color: gray;
             display: flex;
-            flex-direction:  ;
+            justify-content: ;
         }
 
         p {
