--- a/02-flexbox.html
+++ b/02-flexbox.html
@@ -11,7 +11,9 @@
         div {
             background-color: gray;
             display: flex;
-            justify-content: ;
+            height: 300px;
+            justify-content: space-around;
+            align-items: ;
         }
 
         p {
