--- a/02-flexbox.html
+++ b/02-flexbox.html
@@ -11,13 +11,13 @@
         div {
             background-color: gray;
             display: flex;
-            height: 300px;
             justify-content: space-around;
-            align-items: ;
+            flex-wrap: ;
         }
 
         p {
             background-color: red;
+            padding: 50px;
         }
     </style>
 </head>
