--- a/04-backgroundsize.html
+++ b/04-backgroundsize.html
@@ -11,7 +11,7 @@
             width: 700px;
             height: 700px;
             background-color: blueviolet;
-            background-image: url("background_img.png");
+            background-image: url("04-background_img.png");
             /* background-size: 700px 700px; */
             /* background-size: contain;
             background-repeat: no-repeat; */
